SFDC Automation/src/objects/BTR_History__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Approved Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_to_take__c</fullName>
        <label>Approved % to take</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>As_Is_Vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>As Is Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BTR_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BTR Number</label>
        <referenceTo>BTR__c</referenceTo>
        <relationshipLabel>BTR Histories</relationshipLabel>
        <relationshipName>BTR_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BTR_Status__c</fullName>
        <label>BTR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted - With FAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - With DAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - With VP AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Book_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Book Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Name of the customer</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_At_UTC__c</fullName>
        <label>Days At UTC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Make_Model__c</fullName>
        <label>Engine Make/Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gain_Loss__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gain (Loss)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Conditional_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the BTR is approved conditionally.</description>
        <label>Is Conditional Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_BTR__c</fullName>
        <label>Legacy BTR #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Model__c</fullName>
        <label>Make Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVI_Percent__c</fullName>
        <label>NVI(%)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offer_Price_Sale_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Offer Price/Sale Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Number</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>BTR Histories</relationshipLabel>
        <relationshipName>BTR_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requester_Comments__c</fullName>
        <label>BTR Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_Class__c</fullName>
        <label>SAM Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Take_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Take Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Take_Price_percent__c</fullName>
        <label>Take Price (%)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UTC__c</fullName>
        <label>UTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VOSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Number__c</fullName>
        <label>Vehicle Number</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>This field holds the model year (this is defined as text to suppress the &apos;,&apos; in the UI).</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>BTR History</label>
    <nameField>
        <label>BTR History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BTR Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>